--- a/README
+++ b/README
@@ -6,3 +6,9 @@ it is no longer maintained.
 In addition to Rails 2, I also added WYM Editor to the posts admin page, attachments using
 paperclip, and some other things. On the other hand, I also removed some functionality... 
 more information TODO.
+
+
+
+Changes from SimpleLog 2
+ - removed themes, minimal value and not very popular any more
+ - changed post/page editor to WYSIWYG, using WYM editor
