Just making sure that I don't have to force commit... was messing with repo.

--- a/README
+++ b/README
@@ -1,7 +1,6 @@
 README for SimpleLog-X
 
-This software is licensed under GPL v2 or later.
-See doc/LICENSE and doc/CONTRIBUTORS for details.
+This software is licensed under GPL v2 or later. See doc/LICENSE and doc/CONTRIBUTORS for details.
 
 
 SimpleLog was originally created in 2006 circa Rails 1.0 or 1.1, I'm not sure. 
